--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 Homework1_Neo4J_TheBeerProject/_/
 ./data/
-
+Homework2_MongoDB/_/
 
 # Created by .ignore support plugin (hsz.mobi)
 # Source: https://gist.github.com/MOOOWOOO/3cf91616c9f3bbc3d1339adfc707b08a
