Resolvi as queries todas sem mexer no esquema - para depois compararmos

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ ENV/
 Homework1_Neo4J_TheBeerProject/_/Container.txt
 Homework2_MongoDB/data/
 Homework2_MongoDB/Group5_BDMM_HW2.html
+Homework2_MongoDB/airbnb_document_smaller.jsonc
+Homework2_MongoDB/Group5_BDMM_HW2_WithoutNewSchema.html
