Tudo com os comentário. Só falta rever tudo

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ Homework2_MongoDB/data/
 Homework2_MongoDB/Group5_BDMM_HW2.html
 Homework2_MongoDB/Group5_BDMM_HW2_WithoutNewSchema.html
 Homework2_MongoDB/Versões/Group5_BDMM_HW2_WithoutNewSchema.html
+Homework2_MongoDB/Group5_BDMM_HW2.pdf
