--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ ENV/
 .idea/
 Homework1_Neo4J_TheBeerProject/_/Container.txt
 Homework2_MongoDB/data/
-Homework2_MongoDB/Group5_BDMM_HW2.html
+# Homework2_MongoDB/Group5_BDMM_HW2.html
 Homework2_MongoDB/Group5_BDMM_HW2_WithoutNewSchema.html
 Homework2_MongoDB/Versões/Group5_BDMM_HW2_WithoutNewSchema.html
 Homework2_MongoDB/Group5_BDMM_HW2.pdf
